Commit  CadastrarCliente.htm, Login.htm, e ErroLogin.htm. Criação da ServletControle,
criação das paginas CadastrarCliente.htm, Login.htm, e ErroLogin.htm.
Criação da ServletControle,
e cadastro de cliente funcionando.

--- a/TrabalhoTEDS/src/main/webapp/index.html
+++ b/TrabalhoTEDS/src/main/webapp/index.html
@@ -6,5 +6,9 @@
     </head>
     <body>
         <h1>Hello World!</h1>
+
+        <form action="/TrabalhoTEDS/CadastrarCliente.html">
+            <input type="submit" value="Cadastrar Cliente" />
+        </form>
     </body>
 </html>
